fix bug in utils

--- a/B/notebooks/CNN_try.ipynb
+++ b/B/notebooks/CNN_try.ipynb
@@ -740,9 +740,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (utils.py, line 27)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"utils/utils.py\"\u001b[0;36m, line \u001b[0;32m27\u001b[0m\n\u001b[0;31m    bins=(num_labels,num_labels),\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Import 0) progress bar and 1) data recording utility (into csv file)\n",
     "from utils import progress_bar, CSVData, disp_learn_hist\n"
