--- a/A/Create_Sum_Rings.ipynb
+++ b/A/Create_Sum_Rings.ipynb
@@ -13,12 +13,12 @@
     "%matplotlib inline\n",
     "\n",
     "def Create_Sum_Rings( DATA_DIRS=['/data/hkml_data/IWCDgrid/varyE/e-'], flavour='100k.h5', \n",
-    "                      output_file='/data/jamieson/data/e-_tworing.npz' ):\n",
+    "                      output_file='/data/UVicWorkshopPlayground/A/data/e-_tworing.npz' ):\n",
     "\n",
     "                     \n",
     "    loader=loader_factory('H5Dataset', batch_size=2, \n",
     "                          shuffle=True, num_workers=4, data_dirs=DATA_DIRS, \n",
-    "                          flavour=flavour, start_fraction=0.0, use_fraction=1.0,\n",
+    "                          flavour=flavour, start_fraction=0.0, use_fraction=0.1,\n",
     "                          read_keys=[ 'event_data', 'labels','directions', 'energies', 'pids', 'positions'])    \n",
     "    #output lists\n",
     "    ev_data=[]\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,12 +77,12 @@
       "text/html": [
        "\n",
        "        <progress \n",
-       "            value='100'\n",
-       "            max='50000',\n",
+       "            value='5000'\n",
+       "            max='5000',\n",
        "            style='width: 30%'\n",
        "        >\n",
-       "            100\n",
-       "        </progress> 0% Progress\n",
+       "            5000\n",
+       "        </progress> 100% Progress\n",
        "    "
       ],
       "text/plain": [
@@ -91,11 +91,116 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create_Sum_Rings finished loop over events\n",
+      "Begin data compress\n",
+      "Done Create_Sum_Rings\n",
+      "Done.\n"
+     ]
     }
    ],
    "source": [
     "Create_Sum_Rings()\n",
     "print(\"Done.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import print_function\n",
+    "from __future__ import division\n",
+    "from __future__ import absolute_import\n",
+    "import numpy as np\n",
+    "import sys, h5py, tables, os\n",
+    "\n",
+    "def make_h5(file_list,output_file):\n",
+    "    \"\"\"\n",
+    "    Args: file_list ... list, files to be taken as input\n",
+    "          output_file ... string, name of an output h5 file\n",
+    "    \"\"\"\n",
+    "\n",
+    "    print('Will process',len(file_list),'files...')\n",
+    "\n",
+    "    # Create output file\n",
+    "    FILTERS   = tables.Filters(complib='zlib', complevel=5)\n",
+    "    output    = tables.open_file(output_file,mode='w',filters=FILTERS)\n",
+    "    out_ndarray = {}\n",
+    "    out_1darray = {}\n",
+    "    label     = None\n",
+    "\n",
+    "    # Loop over files, read data & store\n",
+    "    # For labels, since it's a small 1D array, we store all at the end\n",
+    "    # For event_data, they will be appended file-by-file\n",
+    "    for file_index,file_name in enumerate(file_list):\n",
+    "        # Open file\n",
+    "        f = np.load(file_name)\n",
+    "\n",
+    "        for key in f.keys():\n",
+    "            data_shape = f[key].shape\n",
+    "            if len(data_shape) < 2:\n",
+    "                if not key in out_1darray: out_1darray[key]=f[key].astype(np.float32)\n",
+    "                else: out_1darray[key] = np.hstack([out_1darray[key],f[key].astype(np.float32)])\n",
+    "            else:\n",
+    "                if not key in out_ndarray:\n",
+    "                    chunk_shape = [1] + list(data_shape[1:])\n",
+    "                    data_shape  = [0] + list(data_shape[1:])\n",
+    "                    out_ndarray[key] = output.create_earray(output.root,key,tables.Float32Atom(),chunkshape=chunk_shape,shape=data_shape)\n",
+    "                out_ndarray[key].append(f[key].astype(np.float32))\n",
+    "\n",
+    "        sys.stdout.write('Progress: %1.3f\\r' % (float(file_index+1)/len(file_list)))\n",
+    "        sys.stdout.flush()\n",
+    "    sys.stdout.write('\\n')\n",
+    "    # Create chunked-array to store 1D arrays\n",
+    "    for key in out_1darray:\n",
+    "        data = out_1darray[key]\n",
+    "        out_data = output.create_carray(output.root, key, tables.Float32Atom(), shape=data.shape)\n",
+    "        out_data[:] = data\n",
+    "\n",
+    "    # Report what's stored\n",
+    "    print('\\nFinished!\\n')\n",
+    "    # Close output file\n",
+    "    output.close()\n",
+    "\n",
+    "    import h5py\n",
+    "    f=h5py.File(output_file,mode='r')\n",
+    "    print('Stored keys:',f.keys())\n",
+    "    for key in f.keys():\n",
+    "        print('    %s ... shape %s' % (key,f[key].shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Will process 1 files...\n",
+      "Progress: 1.000\n",
+      "\n",
+      "Finished!\n",
+      "\n",
+      "Stored keys: [u'directions', u'energies', u'event_data', u'labels', u'pids', u'positions']\n",
+      "    directions ... shape (5000, 2, 88, 168, 2)\n",
+      "    energies ... shape (5000, 2)\n",
+      "    event_data ... shape (5000, 88, 168, 2)\n",
+      "    labels ... shape (5000, 2)\n",
+      "    pids ... shape (5000, 2, 1, 3)\n",
+      "    positions ... shape (5000, 2, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "make_h5(['/data/UVicWorkshopPlayground/A/data/e-_tworing.npz'],'e-_tworing_100k.h5')"
    ]
   },
   {
