--- a/A/MultiRingClassifier.ipynb
+++ b/A/MultiRingClassifier.ipynb
@@ -43,7 +43,7 @@
     "        super(CNN, self).__init__()\n",
     "        # feature extractor CNN\n",
     "        self._feature = torch.nn.Sequential(\n",
-    "            torch.nn.Conv2d(2,16,3), torch.nn.ReLU(),\n",
+    "            torch.nn.Conv2d(1,16,3), torch.nn.ReLU(), #in-channels, out-channels, kernel-size #non-linear filter #down-sample taking max value in (kernel-size, stride) to 1\n",
     "            torch.nn.MaxPool2d(2,2),\n",
     "            torch.nn.Conv2d(16,32,3), torch.nn.ReLU(),\n",
     "            torch.nn.Conv2d(32,32,3), torch.nn.ReLU(),\n",
@@ -82,7 +82,7 @@
     "class BLOB:\n",
     "    pass\n",
     "blob=BLOB()\n",
-    "blob.net       = CNN(3).cuda() # construct Lenet for 3 class classification, use GPU\n",
+    "blob.net       = CNN(2).cuda() # construct Lenet for 2 class classification (1 ring, 2 ring), use GPU\n",
     "blob.criterion = torch.nn.CrossEntropyLoss() # use softmax loss to define an error\n",
     "blob.optimizer = torch.optim.Adam(blob.net.parameters(),weight_decay=0.001) # use Adam optimizer algorithm\n",
     "blob.softmax   = torch.nn.Softmax(dim=1) # not for training, but softmax score for each class\n",
@@ -91,7 +91,8 @@
     "\n",
     "# Create data loader\n",
     "from iotools import loader_factory\n",
-    "DATA_DIRS=['/scratch/hkml_data/IWCDgrid/varyE/e-','/scratch/hkml_data/IWCDgrid/varyE/mu-','/scratch/hkml_data/IWCDgrid/varyE/gamma']\n",
+    "#DATA_DIRS=['/scratch/hkml_data/IWCDgrid/varyE/e-','/scratch/hkml_data/IWCDgrid/varyE/mu-','/scratch/hkml_data/IWCDgrid/varyE/gamma']\n",
+    "DATA_DIRS=['/data/hkml_data/IWCDgrid/varyE/e-','/scratch/hkml_data/IWCDgrid/varyE/mu-','/scratch/hkml_data/IWCDgrid/varyE/gamma']\n",
     "# for train\n",
     "blob.train_loader=loader_factory('H5Dataset', batch_size=64, shuffle=True, num_workers=4, data_dirs=DATA_DIRS, flavour='100k.h5', start_fraction=0.0, use_fraction=0.2)\n",
     "# for validation\n",
