--- a/A/Create_Sum_Rings.ipynb
+++ b/A/Create_Sum_Rings.ipynb
@@ -18,11 +18,12 @@
     "                     \n",
     "    loader=loader_factory('H5Dataset', batch_size=2, \n",
     "                          shuffle=True, num_workers=4, data_dirs=DATA_DIRS, \n",
-    "                          flavour=flavour, start_fraction=0.0, use_fraction=0.1,\n",
+    "                          flavour=flavour, start_fraction=0.0, use_fraction=1.0,\n",
     "                          read_keys=[ 'event_data', 'labels','directions', 'energies', 'pids', 'positions'])    \n",
     "    #output lists\n",
     "    ev_data=[]\n",
     "    labels=[]\n",
+    "    mring_labels=[]\n",
     "    pids=[]\n",
     "    positions=[]\n",
     "    directions=[]\n",
@@ -43,15 +44,17 @@
     "        tqev3[:,:,1] = np.maximum( tqev1[:,:,1], tqev2[:,:,1])  # take maximum time\n",
     "        \n",
     "        ev_data.append( np.expand_dims( tqev3, axis=0 ) )\n",
-    "        labels.append(     [ evt[1][0], evt[1][1] ] )\n",
-    "        directions.append( [ evt[2][0], evt[2][1] ] )  \n",
-    "        energies.append(   [ evt[3][0], evt[3][1] ] )  \n",
-    "        pids.append(       [ evt[4][0], evt[4][1] ] )  \n",
-    "        positions.append(  [ evt[5][0], evt[5][1] ] )  \n",
+    "        labels.append(       0 )\n",
+    "        mring_labels.append( [ evt[1][0], evt[1][1] ] )\n",
+    "        directions.append(   [ evt[2][0], evt[2][1] ] )  \n",
+    "        energies.append(     [ evt[3][0], evt[3][1] ] )  \n",
+    "        pids.append(         [ evt[4][0], evt[4][1] ] )  \n",
+    "        positions.append(    [ evt[5][0], evt[5][1] ] )  \n",
     "        \n",
     "    print(\"Create_Sum_Rings finished loop over events\")  \n",
     "    all_events=np.concatenate(ev_data)\n",
     "    all_labels=np.asarray(labels)\n",
+    "    all_mringlabels=np.asarray(mring_labels)\n",
     "    all_pids=np.asarray(pids)\n",
     "    all_positions=np.asarray(positions)\n",
     "    all_directions=np.asarray(directions)\n",
@@ -63,7 +66,8 @@
     "                    pids=all_pids,\n",
     "                    positions=all_positions,\n",
     "                    directions=all_directions,\n",
-    "                    energies=all_energies)\n",
+    "                    energies=all_energies,\n",
+    "                    mring_labels=all_mringlabels)\n",
     "    print(\"Done Create_Sum_Rings\")\n"
    ]
   },
@@ -77,11 +81,11 @@
       "text/html": [
        "\n",
        "        <progress \n",
-       "            value='5000'\n",
-       "            max='5000',\n",
+       "            value='50000'\n",
+       "            max='50000',\n",
        "            style='width: 30%'\n",
        "        >\n",
-       "            5000\n",
+       "            50000\n",
        "        </progress> 100% Progress\n",
        "    "
       ],
@@ -110,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,25 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Will process 1 files...\n",
-      "Progress: 1.000\n",
-      "\n",
-      "Finished!\n",
-      "\n",
-      "Stored keys: [u'directions', u'energies', u'event_data', u'labels', u'pids', u'positions']\n",
-      "    directions ... shape (5000, 2, 88, 168, 2)\n",
-      "    energies ... shape (5000, 2)\n",
-      "    event_data ... shape (5000, 88, 168, 2)\n",
-      "    labels ... shape (5000, 2)\n",
-      "    pids ... shape (5000, 2, 1, 3)\n",
-      "    positions ... shape (5000, 2, 1)\n"
+      "Will process 1 files...\n"
      ]
     }
    ],
