--- a/A/Create_Sum_Rings.ipynb
+++ b/A/Create_Sum_Rings.ipynb
@@ -181,14 +181,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Will process 1 files...\n"
+      "Will process 1 files...\n",
+      "Progress: 1.000\n",
+      "\n",
+      "Finished!\n",
+      "\n",
+      "Stored keys: [u'directions', u'energies', u'event_data', u'labels', u'mring_labels', u'pids', u'positions']\n",
+      "    directions ... shape (50000, 2, 88, 168, 2)\n",
+      "    energies ... shape (50000, 2)\n",
+      "    event_data ... shape (50000, 88, 168, 2)\n",
+      "    labels ... shape (50000,)\n",
+      "    mring_labels ... shape (50000, 2)\n",
+      "    pids ... shape (50000, 2, 1, 3)\n",
+      "    positions ... shape (50000, 2, 1)\n"
      ]
     }
    ],
