Adding plots of failed electrons/muons actually

--- a/D/HKML_CNN_Full.ipynb
+++ b/D/HKML_CNN_Full.ipynb
@@ -309,12 +309,93 @@
       "text/html": [
        "\n",
        "        <progress \n",
-       "            value='500'\n",
+       "            value='625'\n",
        "            max='625',\n",
        "            style='width: 30%'\n",
        "        >\n",
-       "            500\n",
-       "        </progress> 80% ... Iteration 1750 ... Epoch 2.80 ... Loss 0.157 ... Accuracy 0.938\n",
+       "            625\n",
+       "        </progress> 100% ... Iteration 1875 ... Epoch 3.00 ... Loss 0.135 ... Accuracy 0.937\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3 Starting @ 2019-04-17 21:39:20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <progress \n",
+       "            value='625'\n",
+       "            max='625',\n",
+       "            style='width: 30%'\n",
+       "        >\n",
+       "            625\n",
+       "        </progress> 100% ... Iteration 2500 ... Epoch 4.00 ... Loss 0.069 ... Accuracy 0.968\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4 Starting @ 2019-04-17 21:40:05\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <progress \n",
+       "            value='625'\n",
+       "            max='625',\n",
+       "            style='width: 30%'\n",
+       "        >\n",
+       "            625\n",
+       "        </progress> 100% ... Iteration 3125 ... Epoch 5.00 ... Loss 0.089 ... Accuracy 0.968\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5 Starting @ 2019-04-17 21:40:50\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <progress \n",
+       "            value='280'\n",
+       "            max='625',\n",
+       "            style='width: 30%'\n",
+       "        >\n",
+       "            280\n",
+       "        </progress> 44% ... Iteration 3405 ... Epoch 5.45 ... Loss 0.118 ... Accuracy 0.922\n",
        "    "
       ],
       "text/plain": [
