--- a/A/Create_SumN_Rings.ipynb
+++ b/A/Create_SumN_Rings.ipynb
@@ -25,12 +25,12 @@
     "    if type(nsum) == int:\n",
     "        if nsum > maxrings: nsum = 6\n",
     "    else:\n",
-    "        if nsum < 2.0 : nsum =2.0\n",
+    "        if nsum < 1.0 : nsum =1.0\n",
     "        if nsum > maxrings: nsum = 6.0\n",
     "        \n",
     "    loader=loader_factory('H5Dataset', batch_size=1, \n",
     "                          shuffle=True, num_workers=4, data_dirs=DATA_DIRS, \n",
-    "                          flavour=flavour, start_fraction=0.0, use_fraction=0.05,\n",
+    "                          flavour=flavour, start_fraction=0.0, use_fraction=0.5,\n",
     "                          read_keys=[ 'event_data', 'labels','directions', 'energies', 'pids', 'positions'])    \n",
     "    #output lists\n",
     "    ev_data=[]\n",
@@ -56,7 +56,7 @@
     "            if type(nsum) == int: \n",
     "                nevget = nsum\n",
     "            else:\n",
-    "                nevget = np.random.randint(2,maxrings+1) \n",
+    "                nevget = np.random.randint(1,maxrings+1) \n",
     "            \n",
     "        tqevs.append( evt )\n",
     "        nevavail = nevavail + 1\n",
@@ -118,17 +118,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Create_SumN_Rings(  DATA_DIRS=['/data/hkml_data/IWCDgrid/varyE/e-'], flavour='100k.h5', \n",
-    "                      output_file='/data/jamieson/data/e-_tworing.npz', nsum=2 )\n",
-    "print(\"Done.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -137,11 +126,11 @@
       "text/html": [
        "\n",
        "        <progress \n",
-       "            value='5000'\n",
-       "            max='5000',\n",
+       "            value='50000'\n",
+       "            max='50000',\n",
        "            style='width: 30%'\n",
        "        >\n",
-       "            5000\n",
+       "            50000\n",
        "        </progress> 100% Progress\n",
        "    "
       ],
@@ -166,6 +155,55 @@
    "source": [
     "Create_SumN_Rings(  DATA_DIRS=['/data/hkml_data/IWCDgrid/varyE/e-'], flavour='100k.h5', \n",
     "                      output_file='/data/jamieson/data/e-_randomto6ring.npz', nsum=6.0 )\n",
+    "print(\"Done.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <progress \n",
+       "            value='100000'\n",
+       "            max='100000',\n",
+       "            style='width: 30%'\n",
+       "        >\n",
+       "            100000\n",
+       "        </progress> 100% Progress\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create_SumN_Rings finished loop over events\n",
+      "Begin data compress\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "Create_SumN_Rings(  DATA_DIRS=['/data/hkml_data/IWCDgrid/varyE/e-'], flavour='100k.h5', \n",
+    "                      output_file='/data/jamieson/data/e-_tworing.npz', nsum=2 )\n",
     "print(\"Done.\")"
    ]
   },
